--- a/views/user/categoryPrdt.ejs
+++ b/views/user/categoryPrdt.ejs
@@ -49,7 +49,7 @@
                             <p class="mt-1 text-sm text-gray-500"><%= product.color %></p>
                         </div>
                         <% if(product.offer && product.offer[0] && product.offer[0].offerPrice) { %>
-                            <h1 class="text-1xl font-medium line-through">₹<%- product.price %>.00</h1>
+                            <h1 class="text-1xl font-medium line-through text-red-400">₹<%- product.price %>.00</h1>
                             <h1 class="text-1xl font-medium">₹<%- product.offer[0].offerPrice %>.00</h1>
                           <% } else { %>
                             <h1 class="text-1xl font-medium">₹<%- product.price %>.00</h1>
