category validation fixed

--- a/views/admin/coupon-list.ejs
+++ b/views/admin/coupon-list.ejs
@@ -1,12 +1,9 @@
 <%- include('../partials/adminHeader') %>
 
-
-<!-- component -->
 <link rel="stylesheet" href="https://demos.creative-tim.com/notus-js/assets/styles/tailwind.css">
 <link rel="stylesheet" href="https://demos.creative-tim.com/notus-js/assets/vendor/@fortawesome/fontawesome-free/css/all.min.css">
 
 <main>
-
 
 <section class="py-1 bg-blueGray-50 ">
 <div class="w-full mb-12 xl:mb-0 px-2 mt-16">
@@ -16,26 +13,27 @@
         <div class="relative w-full px-4 max-w-full flex-grow flex-1">
           <h3 class="font-semibold text-base text-blueGray-700">    </h3>
         </div>
-        
       </div>
     </div>
-
     <div class="w-full">
       <table class="items-center bg-transparent w-full border-collapse ">
         <thead>
-            
           <tr>
-            <th class="pl-5 bg-blueGray-200 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">
-                          Coupone Code</th>
-          <th class="pl-5 bg-blueGray-200 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">
-                          Description</th>
-           <th class=" bg-blueGray-200 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">
-                          Discount</th>
-          <th class=" bg-blueGray-200 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">
-                          Minimum Amount</th>
-        
-          <th class=" bg-blueGray-200 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">
-                          Expiry Date</th>
+            <th class="pl-5 bg-violet-600 text-white align-middle border border-solid border-blueGray-100 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">
+             Coupone Code
+            </th>
+          <th class="pl-5 bg-violet-600 text-white align-middle border border-solid border-blueGray-100 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">
+             Description
+            </th>
+           <th class=" bg-violet-600 text-white align-middle border border-solid border-blueGray-100 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">
+             Discount
+            </th>
+          <th class=" bg-violet-600 text-white align-middle border border-solid border-blueGray-100 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">
+             Minimum Amount
+            </th>
+          <th class=" bg-violet-600 text-white align-middle border border-solid border-blueGray-100 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">
+             Expiry Date
+            </th>
           </tr>
         </thead>
 
