--- a/views/admin/userManagement.ejs
+++ b/views/admin/userManagement.ejs
@@ -2,7 +2,7 @@
 
 <main>
 
-    <section class="w-full h-auto bg-blue-700 overflow-x-auto">
+    <section class="w-full h-auto bg-blue-700 overflow-x-auto mt-12">
         <div class="min-w-full">
             <table class="min-w-full divide-y divide-gray-200">
                 <thead class="bg-pink-200">
