--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -93,7 +93,7 @@ initTWE({ Dropdown, Ripple });
              </div>
                   <a href="/home" class="text-gray-800 hover:text-cyan-300 line px-3 py-2 text-xs my-5 font-thin">Home</a>
                   <a href="/shopping" class="text-gray-800 hover:text-cyan-300 line px-3 py-2 text-xs my-5 font-thin">Shopping</a>
-                  <!-- <a href="/wishlist" class="text-gray-800 hover:text-cyan-300 line px-3 py-2 text-xs my-5 font-thin">Wishlist</a> -->
+                  <a href="/wishlist" class="text-gray-800 hover:text-cyan-300 line px-3 py-2 text-xs my-5 font-thin">Wishlist</a>
                   <a href="/cart" class="text-gray-800 hover:text-cyan-300 px-3 py-2 text-xs my-5 font-thin">Cart</a>
                   <a href="/userProfile" class="text-gray-800 hover:text-cyan-300 px-3 py-2 text-xs my-5 font-thin">My Account</a>
                   <a href="/logout" class="text-gray-800 hover:text-cyan-300 px-3 py-2 text-xs my-5 font-thin">Logout</a>
@@ -134,7 +134,7 @@ initTWE({ Dropdown, Ripple });
       <div class="space-y-1 px-2 pb-3 pt-2">
         <!-- Current: "bg-gray-900 text-white", Default: "text-gray-950 hover:bg-gray-700 hover:text-white" -->
         <input class="rounded-full h-7 my-6 border-2 border-gray-300" type="text">
-        <a href="#" class="text-gray-950 hover:text-cyan-500 block rounded-md px-3 py-2 text-base font-medium">Search</a>
+        <a href="/shopping" class="text-gray-950 hover:text-cyan-500 block rounded-md px-3 py-2 text-base font-medium">Shopping</a>
         <a href="/wishlist" class="text-gray-950 hover:text-cyan-500 block rounded-md px-3 py-2 text-base font-medium">Wishlist</a>
         <a href="/cart" class="text-gray-950 hover:text-cyan-500 block rounded-md px-3 py-2 text-base font-medium">Cart</a>
         <a href="#" class="text-gray-950 hover:text-cyan-500 block rounded-md px-3 py-2 text-base font-medium">User</a>
