--- a/views/admin/salesReport.ejs
+++ b/views/admin/salesReport.ejs
@@ -65,19 +65,19 @@
             <%= ord.userId %>
             </td>
             <td class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4">
-              <i class="fas fa-arrow-up text-emerald-500 mr-4"></i>
+              <i class=" text-emerald-500 mr-4"></i>
             <%= email %>
             </td>
             <td class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4">
-              <i class="fas fa-arrow-up text-emerald-500 mr-4"></i>
+              <i class=" text-emerald-500 mr-4"></i>
             <%= ord.createdate %>
             </td>
             <td class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4">
-              <i class="fas fa-arrow-up text-emerald-500 mr-4"></i>
+              <i class=" text-emerald-500 mr-4"></i>
             <%= ord.status %>
             </td>
             <td class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4">
-              <i class="fas fa-arrow-up text-emerald-500 mr-4"></i>
+              <i class=" text-emerald-500 mr-4"></i>
             <%= ord.total %>
             </td>
             <td class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4">
