--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,11 +12,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sono:wght@200..800&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.0.0/dist/tailwind.min.css" rel="stylesheet">
+    <!------------- toastr -------------->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" rel="stylesheet">
     
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
-   
     <script src="https://cdn.tailwindcss.com"></script> 
+    
     <script>
 import {
   Dropdown,
@@ -41,6 +42,12 @@ initTWE({ Dropdown, Ripple });
     "MONO" 1;
 };
 @import url('https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap');
+</style>
+<!------------- custom toastr message ------------>
+<style>
+  #toast-container > .toast-error {
+    background-color: red !important;
+  }
 </style>
 </head>
 
