--- a/views/partials/adminFooter.ejs
+++ b/views/partials/adminFooter.ejs
@@ -1,4 +1,6 @@
-
+<!------------- toastr jquery ---------------->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
 
 <script src="https://unpkg.com/@popperjs/core@2"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
