--- a/views/partials/adminHeader.ejs
+++ b/views/partials/adminHeader.ejs
@@ -13,6 +13,10 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Michroma&display=swap">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,400;1,600&display=swap" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" rel="stylesheet">
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.debug.js" integrity="sha384-NGB9XqFIl/+WnY/+/8ZTv3A4Jmz5W/+mDsRYgKO+/YeK5mRNkTK+AoTlqvQIWwW" crossorigin="anonymous"></script>
+    <script src="path/to/jspdf.debug.js"></script>
 <style>
   * { 
   font-family: 'Source Sans Pro';
