--- a/views/partials/adminHeader.ejs
+++ b/views/partials/adminHeader.ejs
@@ -17,14 +17,23 @@
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.debug.js" integrity="sha384-NGB9XqFIl/+WnY/+/8ZTv3A4Jmz5W/+mDsRYgKO+/YeK5mRNkTK+AoTlqvQIWwW" crossorigin="anonymous"></script>
     <script src="path/to/jspdf.debug.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Admin Panel</title>
+   <style>
+      #toast-container > .toast-success {
+   background-color: rgb(68, 230, 68) !important;
+   
+ }
+
+</style>
 <style>
   * { 
   font-family: 'Source Sans Pro';
   }
 </style>
-    <script src="https://cdn.tailwindcss.com"></script>
+    
 
-    <title>Admin Panel</title>
+   
     <style>
       .michroma-regular{
   font-family: "Michroma", sans-serif;
