--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -1,4 +1,5 @@
 <%- include('../partials/adminHeader') %>
+
    <main>
       <!-- Content -->
         <div class="p-6">
@@ -55,15 +56,21 @@
                       </div>
                   </div>
               </div>
-              
-              
-
         </div>
       <!-- End Content -->
     </main>
 
     <script src="https://unpkg.com/@popperjs/core@2"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script>
+        var toastMessage = "<%= typeof toastMessage !== 'undefined' ? toastMessage.text : '' %>";
+        document.addEventListener('DOMContentLoaded', function() {
+            if (toastMessage !== '') {
+                toastr.success(toastMessage);
+            }
+        });
+    </script>
+    
 
     <script>
         // start: Sidebar
