--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -18,6 +18,13 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.tailwindcss.com"></script> 
     
+    <style>
+      #toast-container > .toast-success {
+   background-color: rgb(13, 197, 13) !important;
+   
+ }
+
+</style>
     <script>
 import {
   Dropdown,
