--- a/views/partials/userProfileSidebar.ejs
+++ b/views/partials/userProfileSidebar.ejs
@@ -5,8 +5,8 @@
       <!-- Loading screen -->
       <div
         x-ref="loading"
-        class="fixed inset-0 z-50 flex items-center justify-center text-2xl font-semibold text-white bg-indigo-800">
-        Loading.....
+        class="fixed inset-0 z-50 flex items-center justify-center text-2xl font-semibold text-white bg-white">
+        
       </div>
 
       <!-- Sidebar -->
